# Cpp-Crypto-Arbitrage-Framework

./: .gitattributes  BellmanFord.cpp  CMakeCache.txt  CMakeLists.txt  CrpytoGraph.cpp  ExchangeTest.cpp  GetTradingVol.py  LICENSE  Makefile  README.md  cmake_install.cmake  cmake_test.cpp  create_user_settings.sh  generate_user_settings.py  graph.cpp  main.cpp  one_symbol.cpp  out.txt  shell_driver.sh  symbol_data.txt  temp.txt  test.cpp  test.txt  timing.txt  user_settings.txt
ExchangeParse/: BitMart.cpp  Bitget.cpp  Gateio.cpp  Huobi.cpp  Kucoin.cpp
Framework/: CMakeLists.txt  create_user_settings.sh  main.cpp  shell_driver.sh  user_settings.txt
Framework/Header_Files/: amount_optimization.hpp  arbitrage_finder.hpp  combinations.hpp  exchange_api_pull.hpp  graph.hpp
Framework/Scratch/: requirments.txt  timing.txt
Framework/Symbol_Data_Files/: Viable_Trading_Pairs.txt  request_coingecko_api.py
Header_Files/: Graph.h  SpotTickerLink.txt  amount_optimization.hpp  arbitrage_finder.hpp  bellmon_ford.hpp  exchange_api_pull.hpp  graph.hpp
Symbol_Data_Files/: Count_Symbols.py  Split_Symbols.py  Symbol_Space_Split.txt  Symbols_Slash_Split.txt  Viable_Symbols.txt  Viable_Trading_Pairs.txt  all_binance_symbols.txt  correct_binance_symbols.txt  request_coingecko_api.py  scrape_coinmarketcap.py  user_settings.txt
